--- a/fastapi-manage/pyproject.toml
+++ b/fastapi-manage/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fastapi-manage"
-version = "0.2.0"
+version = "0.4.0"
 description = ""
 authors = ["lewei_huang <auxpd96@163.com>"]
 readme = 'README.md'
@@ -9,10 +9,14 @@ readme = 'README.md'
 fastapi-manage = "fastapi_manage.main:app"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.6"
 typer = "^0.3.2"
 configobj = "^5.0.6"
 Jinja2 = "^2.11.2"
+fastapi = "^0.62.0"
+uvicorn = "^0.11.8"
+SQLAlchemy = "^1.3.20"
+PyMySQL = "^0.9.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
