--- a/fastapi-manage/pyproject.toml
+++ b/fastapi-manage/pyproject.toml
@@ -5,6 +5,7 @@ description = "FastAPI template generation, database version management tools"
 authors = ["lewei_huang <auxpd96@163.com>"]
 readme = 'README.md'
 license = "MIT"
+repository = "https://gitee.com/LeanDe/fastapi-manage"
 classifiers=[
     "Intended Audience :: Developers",
     "Programming Language :: Python :: 3",
