--- a/fastapi-manage/pyproject.toml
+++ b/fastapi-manage/pyproject.toml
@@ -1,11 +1,10 @@
 [tool.poetry]
 name = "fastapi-manage"
-version = "0.7.1"
+version = "0.7.2"
 description = "FastAPI template generation, database version management tools"
 authors = ["lewei_huang <auxpd96@163.com>"]
 readme = 'README.md'
 license = "MIT"
-repository = "https://gitee.com/LeanDe/fastapi-manage"
 classifiers=[
     "Intended Audience :: Developers",
     "Programming Language :: Python :: 3",
@@ -15,6 +14,10 @@ classifiers=[
 
 [tool.poetry.scripts]
 fastapi-manage = "fastapi_manage.main:app"
+
+[tool.poetry.urls]
+"repository" = "https://gitee.com/LeanDe/fastapi-manage"
+"github" = "https://github.com/auxpd/fastapi-manage"
 
 [tool.poetry.dependencies]
 python = ">=3.6"
