--- a/fastapi-manage/pyproject.toml
+++ b/fastapi-manage/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fastapi-manage"
-version = "0.7.0"
+version = "0.8.0"
 description = "FastAPI template generation, database version management tools"
 authors = ["lewei_huang <auxpd96@163.com>"]
 readme = 'README.md'
@@ -24,7 +24,13 @@ Jinja2 = ">=2.11.2"
 fastapi = ">=0.62.0"
 uvicorn = ">=0.11.8"
 SQLAlchemy = ">=1.3.20"
+alembic = ">=1.5.6"
 PyMySQL = ">=0.9.3"
+python-jose = ">=3.2.0"
+bcrypt = ">=3.2.0"
+python-dotenv = ">=0.15.0"
+asgi-ratelimit = ">=0.4.0"
+loguru = ">=0.5.3"
 
 [tool.poetry.dev-dependencies]
 pytest = ">=5.2"
