--- a/fastapi-manage/pyproject.toml
+++ b/fastapi-manage/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fastapi-manage"
-version = "0.8.0"
+version = "0.8.0b1"
 description = "FastAPI template generation, database version management tools"
 authors = ["lewei_huang <auxpd96@163.com>"]
 readme = 'README.md'
