--- a/fastapi-manage/pyproject.toml
+++ b/fastapi-manage/pyproject.toml
@@ -31,6 +31,7 @@ bcrypt = ">=3.2.0"
 python-dotenv = ">=0.15.0"
 asgi-ratelimit = ">=0.4.0"
 loguru = ">=0.5.3"
+gunicorn = ">=20.0.4"
 
 [tool.poetry.dev-dependencies]
 pytest = ">=5.2"
