--- a/fastapi-manage/pyproject.toml
+++ b/fastapi-manage/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fastapi-manage"
-version = "0.8.0b2"
+version = "0.8.0b3"
 description = "FastAPI template generation, database version management tools"
 authors = ["lewei_huang <auxpd96@163.com>"]
 readme = 'README.md'
@@ -32,6 +32,7 @@ python-dotenv = ">=0.15.0"
 asgi-ratelimit = ">=0.4.0"
 loguru = ">=0.5.3"
 gunicorn = ">=20.0.4"
+celery = ">=5.0.5"
 
 [tool.poetry.dev-dependencies]
 pytest = ">=5.2"
