--- a/fastapi-manage/pyproject.toml
+++ b/fastapi-manage/pyproject.toml
@@ -33,6 +33,8 @@ asgi-ratelimit = ">=0.4.0"
 loguru = ">=0.5.3"
 gunicorn = ">=20.0.4"
 celery = ">=5.0.5"
+requests = ">=2.25.1"
+cryptography = "~3.3.2"
 
 [tool.poetry.dev-dependencies]
 pytest = ">=5.2"
