--- a/fastapi-manage/pyproject.toml
+++ b/fastapi-manage/pyproject.toml
@@ -35,6 +35,8 @@ gunicorn = ">=20.0.4"
 celery = ">=5.0.5"
 requests = ">=2.25.1"
 cryptography = "~3.3.2"
+itsdangerous = ">=1.1.0"
+python-multipart = ">=0.0.5"
 
 [tool.poetry.dev-dependencies]
 pytest = ">=5.2"
