--- a/fastapi-manage/pyproject.toml
+++ b/fastapi-manage/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fastapi-manage"
-version = "0.8.0b4"
+version = "0.8.0b5"
 description = "FastAPI template generation, database version management tools"
 authors = ["lewei_huang <auxpd96@163.com>"]
 readme = 'README.md'
@@ -26,6 +26,7 @@ uvicorn = ">=0.11.8"
 SQLAlchemy = ">=1.3.20"
 alembic = ">=1.5.6"
 PyMySQL = ">=0.9.3"
+aredis = ">=1.1.8"
 python-jose = ">=3.2.0"
 bcrypt = ">=3.2.0"
 python-dotenv = ">=0.15.0"
