--- a/fastapi-manage/pyproject.toml
+++ b/fastapi-manage/pyproject.toml
@@ -1,10 +1,11 @@
 [tool.poetry]
 name = "fastapi-manage"
-version = "0.7.2"
+version = "0.8.0"
 description = "FastAPI template generation, database version management tools"
 authors = ["lewei_huang <auxpd96@163.com>"]
 readme = 'README.md'
 license = "MIT"
+repository = "https://github.com/auxpd/fastapi-manage"
 classifiers=[
     "Intended Audience :: Developers",
     "Programming Language :: Python :: 3",
@@ -27,8 +28,20 @@ Jinja2 = ">=2.11.2"
 fastapi = ">=0.62.0"
 uvicorn = ">=0.11.8"
 SQLAlchemy = ">=1.3.20"
+alembic = ">=1.5.6"
 PyMySQL = ">=0.9.3"
-alembic = ">=1.4.3"
+aredis = ">=1.1.8"
+python-jose = ">=3.2.0"
+bcrypt = ">=3.2.0"
+python-dotenv = ">=0.15.0"
+asgi-ratelimit = ">=0.4.0"
+loguru = ">=0.5.3"
+gunicorn = ">=20.0.4"
+celery = ">=5.0.5"
+requests = ">=2.25.1"
+cryptography = "~3.3.2"
+itsdangerous = ">=1.1.0"
+python-multipart = ">=0.0.5"
 
 [tool.poetry.dev-dependencies]
 pytest = ">=5.2"
